samples/_failures_safe/1761404528_969fe2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5034ffca.c: In function ‘main’:
./samples/SAFE/__tmp_5034ffca.c:143:13: error: expected declaration or statement at end of input
  143 |             printf("Compressed: ");
      |             ^~~~~~
./samples/SAFE/__tmp_5034ffca.c:143:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5034ffca.c:143:13: error: expected declaration or statement at end of input
